--- a/PyCitySchools/main.ipynb
+++ b/PyCitySchools/main.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a1d70e51",
+   "metadata": {},
+   "source": [
+    "# PyCity Schools Analysis - HFattor\n",
+    "\n",
+    "* As a whole, large high schools (those with populations between 2000-5000 students) had a lower percentage of students who are passing math (70% passing vs 94% passing in medium and small high schools) and reading (83% passing vs 96-97% passing in medium and small high schools).\n",
+    "\n",
+    "* Schools that spent over $630 per student had the lowest percentage of students passing classes (less than 65% passing reading and math vs 80-90% of students passing reading and math at school that spent less than $630 per student).\n",
+    "\n",
+    "* As a whole, charter schools had a higher percentage of students passing both math and reading (90% vs 54% for district schools). However, more analysis will be required to determine if this is because of teaching practices, budget allotment, or because charter schools serve smaller student populations per school. \n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2603e008",
@@ -1975,7 +1991,7 @@
   "kernelspec": {
    "display_name": "PythonData",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1987,7 +2003,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7 (default, May  6 2020, 11:45:54) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7307517f52e844aa41d5b5716a717a37a30c47be37feab9f3c4e2248f37f36b5"
+   }
   }
  },
  "nbformat": 4,
